...
                                    <constraint firstAttribute="height" constant="40" id="UY0-b6-rGf"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HBa-AW-ijs">
                                <rect key="frame" x="60" y="120" width="255" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="iAR-3p-gnZ"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
